tests/negative/gold/static_setter_test.gold
tests/negative/static_setter_test.toit:9:3: error: Argument mismatch for 'foo'
  foo 42
  ^~~
Compilation failed.
